# ECE661_mmSeg

./: .gitmodules  LICENSE  README.md  pyproject.toml
DME_to_PNG/: dme_data_formatting.ipynb
notebooks/david/: plot_logs.ipynb  process_dataset.ipynb  test_pretrained.ipynb  train_mmseg.ipynb  view_result.ipynb
notebooks/david/.ipynb_checkpoints/: process_dataset-checkpoint.ipynb  view_result-checkpoint.ipynb
notebooks/dev/: plot_logs.ipynb  process_dataset.ipynb  test_pretrained.ipynb
scripts/david/: train_mmseg.py  train_multiple_mmseg.py
scripts/dev/: train_mmseg.py
